fixed image links

--- a/presentations/slides/erecords.html
+++ b/presentations/slides/erecords.html
@@ -90,11 +90,11 @@ University at Albany, SUNY
 </script></section><section  data-markdown><script type="text/template">
 ## Inefficient Storage
 
-<!-- .slide: data-background="img/istorage2.jpg" -->
+<!-- .slide: data-background="img/istorage2.JPG" -->
 </script></section><section  data-markdown><script type="text/template">
 ## Efficient Storage
 
-<!-- .slide: data-background="img/estorage.jpg" -->
+<!-- .slide: data-background="img/estorage.JPG" -->
 </script></section><section  data-markdown><script type="text/template">
 ## File Systems are designed for Efficiency
 
@@ -111,7 +111,7 @@ University at Albany, SUNY
 <img src="img/pointers.gif" style="background-color: #fff;"/>
 
 </script></section><section  data-markdown><script type="text/template">
-<!-- .slide: data-background="img/istorage2.jpg" -->
+<!-- .slide: data-background="img/istorage2.JPG" -->
 </script></section><section  data-markdown><script type="text/template">
 ## Where do Files Live?
 
@@ -119,23 +119,23 @@ University at Albany, SUNY
 </script></section><section  data-markdown><script type="text/template">
 ## Where do Files Live?
 
-<img src="img/hdd3.jpg" style="background-color: #fff;"/>
+<img src="img/hdd3.JPG" style="background-color: #fff;"/>
 </script></section><section  data-markdown><script type="text/template">
 ## NTFS on Windows
 
-<img src="img/mft1.jpg" style="background-color: #fff;"/>
+<img src="img/mft1.JPG" style="background-color: #fff;"/>
 
 Brian Carrier, <i>File System Forensic Analysis</i> (Addison-Wesley, 2005), p. 283
 </script></section><section  data-markdown><script type="text/template">
 ## $MFT (Master File Table)
 
-<img src="img/mft2.jpg" style="background-color: #fff;"/>
+<img src="img/mft2.JPG" style="background-color: #fff;"/>
 
 Carrier, p. 280
 </script></section><section  data-markdown><script type="text/template">
 ## $MFT (Master File Table)
 
-<img src="img/mft3.jpg" style="background-color: #fff;"/>
+<img src="img/mft3.JPG" style="background-color: #fff;"/>
 
 Carrier, p. 295
 </script></section><section  data-markdown><script type="text/template">
@@ -144,21 +144,21 @@ Carrier, p. 295
 </script></section><section  data-markdown><script type="text/template">
 ## Deleting Files
 
-<img src="img/hdd3.jpg" style="background-color: #fff;"/>
+<img src="img/hdd3.JPG" style="background-color: #fff;"/>
 </script></section><section  data-markdown><script type="text/template">
 ## Efficiency in Sectors
 
-<img src="img/mft2.jpg" style="background-color: #fff;"/>
+<img src="img/mft2.JPG" style="background-color: #fff;"/>
 </script></section><section  data-markdown><script type="text/template">
 ## Efficiency in Sectors
 
-<img src="img/slackSpace1.jpg" style="background-color: #fff;"/>
+<img src="img/slackSpace1.JPG" style="background-color: #fff;"/>
 
 Carrier, p. 188
 </script></section><section  data-markdown><script type="text/template">
 ## Slack Space
 
-<img src="img/slackSpace2.jpg" style="background-color: #fff;"/>
+<img src="img/slackSpace2.JPG" style="background-color: #fff;"/>
 
 Carrier, p. 188
 </script></section><section  data-markdown><script type="text/template">
