minor slide change

--- a/presentations/slides/challengesDigitalArchives.html
+++ b/presentations/slides/challengesDigitalArchives.html
@@ -21,7 +21,7 @@
 Gregory Wiedeman<br/>
 University Archivist
 </script></section><section  data-markdown><script type="text/template">
-## Overview of University Archives
+## The University Archives
 
 * University Records
 	* Office of the President
@@ -232,9 +232,7 @@ University records are public records, subject to FOIL <!-- .element: class="fra
             // options from URL query string
             var queryOptions = Reveal.getQueryHash() || {};
 
-            var options = {
-  "transition": "fade"
-};
+            var options = {};
             options = extend(defaultOptions, options, queryOptions);
             Reveal.initialize(options);
         </script>
