added final slide

--- a/presentations/slides/challengesDigitalArchives.html
+++ b/presentations/slides/challengesDigitalArchives.html
@@ -65,6 +65,8 @@ University records are public records, subject to FOIL <!-- .element: class="fra
 * Format-neutral practices
 * Requires digital infrastructure
 </script></section><section  data-markdown><script type="text/template">
+<!-- .slide: data-background="img/oais.png" -->
+</script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records Collecting in Practice
 
 * Files On the Live Web
