added one more thing

--- a/index.html
+++ b/index.html
@@ -595,9 +595,19 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
-								<h4><a href="https://github.com/UAlbanyArchives/ua200">Records Transfer Scripts</a></h4>
+								<h4><a href="https://github.com/gwiedeman/archivesUnleashed2017">Link Ranking Project Repo</a></h4>
+								<h5>Python, D3Plus, Spark</h5>
+								<p><a href="http://www.gregwiedeman.com/presentations/slides/linkRanking2017.pdf">Link Ranking Project</a> repository for Archives Unleashed 4.0 Web Archives Datathon.</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4><a href="https://github.com/UAlbanyArchives/createSIP">createSIP.py</a></h4>
 								<h5>Python</h5>
-								<p>Example of scripts actively used to crawl shared drives for new records and package into SIP based on hash index.</p>
+								<p>Command line tool for automating SIPs as bags with an additional metadata file extracted from filesystem data. Currently being reworked to comply with <a href="https://github.com/ruebot/bagit-profiles">Bagit Profiles</a>.</p>
 							</div>
 						</div>
 					</div>
