added repo and ASpace migration as writing

--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@
 					</div>
 					<div class="col-sm-6">
 						<div class="list-group">
+							<a href="https://github.com/UAlbanyArchives/aspacemigration/blob/master/README.md"  class="list-group-item" id="writing-8">
+								<h5 class="list-group-item-heading">"Migrating to ArchivesSpace at UAlbany"</h5>
+								<p class="list-group-item-text">2017 April</p>
+							</a>
 							<a href="http://scholarsarchive.library.albany.edu/cgi/viewcontent.cgi?article=1096&context=ulib_fac_scholar"  class="list-group-item" id="writing-9">
 								<h5 class="list-group-item-heading"><i>Metadata</i> (Book Review)</h5>
 								<p class="list-group-item-text">2017 March</p>
@@ -220,10 +224,10 @@
 								<h5 class="list-group-item-heading">"Practical Digital Forensics at Accession for Born-Digital Institutional Records"</h5>
 								<p class="list-group-item-text">2016 January</p>
 							</a>
-							<a href="http://practicaltechnologyforarchives.org/issue3_wiedeman/"  class="list-group-item" id="writing-4">
+							<!--<a href="http://practicaltechnologyforarchives.org/issue3_wiedeman/"  class="list-group-item" id="writing-4">
 								<h5 class="list-group-item-heading">"XQuery for Archivists: Understanding EAD Finding Aids as Data"</h5>
 								<p class="list-group-item-text">2014 October</p>
-							</a>
+							</a>-->
 							<a href="writing/baker.html" class="list-group-item" id="writing-5">
 								<h5 class="list-group-item-heading">"Nicholson Baker Would Like Us to Be Angry"</h5>
 								<p class="list-group-item-text">2013 March</p>
@@ -298,7 +302,7 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
-								<h4><a href="presentations/slides/archivesManuscripts2017.html">University Archive in Practice at UAlbany</a></h4>
+								<h4><a href="presentations/slides/archivesManuscripts2017.html">University Archives in Practice at UAlbany</a></h4>
 								<h5>2017 October</h5>
 								<p>Guest class for UAlbany's Archives and Manuscript course</p>
 							</div>
@@ -605,9 +609,9 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
-								<h4><a href="https://github.com/UAlbanyArchives/createSIP">createSIP.py</a></h4>
-								<h5>Python</h5>
-								<p>Command line tool for automating SIPs as bags with an additional metadata file extracted from filesystem data. Currently being reworked to comply with <a href="https://github.com/ruebot/bagit-profiles">Bagit Profiles</a>.</p>
+								<h4><a href="https://github.com/UAlbanyArchives/apostropheTesting">apostropheTesting</a></h4>
+								<h5>Python, NLTK, D3Plus</h5>
+								<p>Experimenting with <a href="https://github.com/DocNow/twarc">Twarc</a> and an estimated <a href="https://github.com/edsu/apostrophe">list of Twitter bots</a> for a university <a href="http://www.gregwiedeman.com/presentations/slides/webArchivesADA.html#/">Data Analytics talk</a>.</p>
 							</div>
 						</div>
 					</div>
