--- a/writing/writing.html
+++ b/writing/writing.html
@@ -99,6 +99,12 @@
                 <div class="col-lg-12">
 				
 					<div class="jumbotron">
+						<h2><a href="https://github.com/UAlbanyArchives/aspacemigration/blob/master/README.md">"Migrating to ArchivesSpace at UAlbany"</a></h2>
+						<h5>2017 April</h5>
+						<p>This is an overview our ArchivesSpace migration process and descriptions of the code used. Hopefully this rather long-winded description helps document our processes and thinking.</p>
+					</div>
+				
+					<div class="jumbotron">
 						<h2><a href="http://scholarsarchive.library.albany.edu/cgi/viewcontent.cgi?article=1096&context=ulib_fac_scholar"><i>Metadata</i> (Book Review)</a></h2>
 						<h5>2017 March</h5>
 						<p>Review of <i>Metadata</i> by Marcia Lei Zeng and Jian Qin.</p>
