--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 						<div class="abstract-default">
 							<p>I write mostly on archives, particularly automating collection management and born-digital records.</p>
 						</div>
+						<div class="abstract" id="abs8">
+							<p>This is an overview our ArchivesSpace migration process and descriptions of the code used. Hopefully this rather long-winded description helps document our processes and thinking.</p>
+						</div>
 						<div class="abstract" id="abs9">
 							<p>Review of Metadata by Marcia Lei Zeng and Jian Qin. Discusses different views of metadata among libraries and archives. Published in <i>Archival Issues</i>.</p>
 						</div>
