--- a/presentations/slides/cni2018.html
+++ b/presentations/slides/cni2018.html
@@ -1,8 +1,22 @@
----
-title: Espy Project
-revealOptions:
-    transition: 'fade'
----
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Espy Project</title>
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/moon2.css" id="theme">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
+
+        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <script>
+          document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        </script>
+    </head>
+    <body>
+
+        <div class="reveal">
+            <div class="slides"><section  data-markdown><script type="text/template">
 
 <style>
 #fLeft {float: left; max-width: 58%;}
@@ -20,9 +34,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 ##### University Archivist
 ##### University at Albany, SUNY
 ##### <a>@gregwiedeman</a>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## National Death Penalty Archives at UAlbany
 
 <div id="fLeft">
@@ -32,9 +44,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 <img src="img/clir.png"/>
 <img src="img/hyraxLogo.png"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 
 <div id="fLeft">
 <h3>Watt Espy Papers</h3>
@@ -53,17 +63,11 @@ li {font-size: 30px !important; margin: 12px !important;}
 <div id="fRight">
 	<img src="img/B35_F011_000067.jpg"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <img src="http://library.albany.edu/sites/all/themes/New_UArchives/espy/slaveGirl1.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="http://library.albany.edu/sites/all/themes/New_UArchives/img/full/news1.jpg" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 #### Computational Analysis and the Death Penalty
 
 * <i>Furman v. Georgia</i> (1972)
@@ -75,9 +79,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 	* invalidated statistical analysis for 14th amendment
 * <i>Batson v. Kentucky</i> (1986)
 * <i>Miller-El v. Dretke</i> (2005)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Executions in the U.S. 1608-2002: The Espy File
 
 * University of Alabama project funded by NSF (1984)
@@ -86,9 +88,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 	* Blackman and McLaughlin, “The Espy File on American Executions: User Beware” <i>Homicide Studies</i> 15(3) (2011)
 * Inter-University Consortium for Political and Social Research (ICPSR)
 	* They are nice
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Larger Problems
 
 * Archives typically do not provide this level of access
@@ -98,68 +98,44 @@ li {font-size: 30px !important; margin: 12px !important;}
 	* "Decentralized" (mostly non-existent) records management
 	* 18,000 student, 1,200+ faculty university
 	* Need to demonstrate value to university
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img-iipc/minutes.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img-iipc/undergradBulletin.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/applications1.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/applications2.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting1.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting2.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting3.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting4.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Maintenance
 
 * Scripts break over time
 	* No more ad-hoc approaches
 	* No more XML data stores
 * Network of well-maintained interoperable tools
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## API Access Allows Maintainable Workflows
 
 <img src="img/recordsCollectingLogos.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax1.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Espy Metadata Creation Tool
 
 * Samvera and Hyrax is Rails application
@@ -173,21 +149,13 @@ li {font-size: 30px !important; margin: 12px !important;}
 * Create new Espy Records backed by Data Model
 * Make the computer do the boring work
 * Focus on intellectual process of metadata creation
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy1.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy2.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy3.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <div id="fLeft">
 <h4>Metadata Matters</h4>
 <ul>
@@ -210,9 +178,7 @@ our own</li>
 <div id="fRight">
 	<img src="img/codebook.png"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <div id="fLeft">
 <h4>Metadata Matters</h4>
 <ul>
@@ -235,9 +201,7 @@ our own</li>
 <div id="fRight">
 	<img src="img/codebook.png"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Metadata Matters
 
 * "Crime Committed" changed to "Crime Convicted"
@@ -249,13 +213,9 @@ our own</li>
 	* Altered Place of Execution and Jurisdiction
 	* Sex to become Gender
 	* Feedback welcome!
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/linkedData.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Linked Data Problems
 
 * Hard to find vocabularies with sufficient precision
@@ -265,17 +225,13 @@ our own</li>
 * Archives have a fundamental mission conflict with linked data
 	* Archives is a system to manage objects with minimal metadata
 	* Archives offer information in context, not verifiable data
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Access is Important
 
 <video width="100%" height="100%" autoplay controls>
   <source src="scroll.webm" type="video/webm">
 </video>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## No More Finding Aids
 
 * Need to demonstrate value to university offices
@@ -283,51 +239,29 @@ our own</li>
 	* Crypic signposts
 	* "What Does Scope and Content MEAN???!" (Scheir, 2005, p.72)
 * Archives have always been a compromise between usability and scale
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## An Interoperable Repository with APIs
 
 <img src="img/apiConnectionsLogos.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/arclight1.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/arclight2.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/arclight3.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax2.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax3.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax4.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax5.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/hyrax6.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy3.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## The Espy Project
 
 #### Enabling New Access to Archival Materials
@@ -338,3 +272,56 @@ our own</li>
 ##### University Archivist
 ##### University at Albany, SUNY
 ##### <a>@gregwiedeman</a>
+</script></section></div>
+        </div>
+
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
+
+        <script>
+            function extend() {
+              var target = {};
+              for (var i = 0; i < arguments.length; i++) {
+                var source = arguments[i];
+                for (var key in source) {
+                  if (source.hasOwnProperty(key)) {
+                    target[key] = source[key];
+                  }
+                }
+              }
+              return target;
+            }
+
+            // Optional libraries used to extend on reveal.js
+            var deps = [
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: 'plugin/math/math.js', async: true }
+            ];
+
+            // default options to init reveal.js
+            var defaultOptions = {
+              controls: true,
+              progress: true,
+              history: true,
+              center: true,
+              transition: 'default',
+              dependencies: deps
+            };
+
+            // options from URL query string
+            var queryOptions = Reveal.getQueryHash() || {};
+
+            var options = {
+  "transition": "fade"
+};
+            options = extend(defaultOptions, options, queryOptions);
+            Reveal.initialize(options);
+        </script>
+        
+          <script src="/scripts/slides"></script>
+    </body>
+</html>
