--- a/presentations/slides/cni2018.html
+++ b/presentations/slides/cni2018.html
@@ -97,7 +97,7 @@ li {font-size: 30px !important; margin: 12px !important;}
 	* State retention schedule
 	* "Decentralized" (mostly non-existent) records management
 	* 18,000 student, 1,200+ faculty university
-	* Need to demonstrate value to university
+	* Need to demonstrate value to university offices
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img-iipc/minutes.png" -->
 </script></section><section  data-markdown><script type="text/template">
