linked cni talk

--- a/index.html
+++ b/index.html
@@ -265,6 +265,16 @@
 					<div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/espyPAC.html">The Espy Project: Enabling New Access to Archival Materials</a></h4>
+								<h5>2018 April</h5>
+								<p>CNI project report on providing API access to data from a digitization project and using that technology to rework our university records collecting system.</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/espyPAC.html">The Espy Project: Building Digital Infrastructure</a></h4>
 								<h5>2018 March</h5>
 								<p>Talk I gave on the Espy Project and how its helping us build technology for collecting university records for our library's Professional Activities Committee.</p>
