--- a/presentations/slides/cni2018.html
+++ b/presentations/slides/cni2018.html
@@ -224,7 +224,7 @@ our own</li>
 * Issues with digital archival objects as well
 * Archives have a fundamental mission conflict with linked data
 	* Archives is a system to manage objects with minimal metadata
-	* Archives offer information in context, not verifiable data
+	* Archives offer information in context, not objective/verifiable data
 </script></section><section  data-markdown><script type="text/template">
 ## Access is Important
 
