--- a/presentations/slides/nyac2018.html
+++ b/presentations/slides/nyac2018.html
@@ -1,8 +1,22 @@
----
-title: Born-Digital Records at UAlbany
-revealOptions:
-    transition: 'fade'
----
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Born-Digital Records at UAlbany</title>
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/moon2.css" id="theme">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
+
+        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <script>
+          document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        </script>
+    </head>
+    <body>
+
+        <div class="reveal">
+            <div class="slides"><section  data-markdown><script type="text/template">
 
 ## Born-Digital Records at UAlbany
 
@@ -14,17 +28,13 @@ revealOptions:
 ##### University at Albany, SUNY
 ##### GWiedeman@albany.edu
 ##### <a>@gregwiedeman</a>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records at UAlbany
 
 * Building Born-Digital infrastructure
 * Making Access Familiar
 * Challenges (they're not really technical)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## The University Archives
 
 * University Records
@@ -39,9 +49,7 @@ revealOptions:
 	* Student Association
 	* Albany Student Press
 	* Faculty and Alumni Papers
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Traditional Practices
 
 * Driven by physical space
@@ -51,17 +59,13 @@ revealOptions:
 * Call the University Archivist for information
 
 * <!-- .element: class="fragment" data-fragment-index="1" -->This model no longer works
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Need to Demonstrate Value to Creators
 
 * Today most permanent records are created digitally
 * Digital space is less of a barrier
 * Creators want near-immediate access
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records Collecting in Practice
 
 * Files On the Live Web
@@ -72,32 +76,20 @@ revealOptions:
 	* Cloud Storage (OneDrive)
 	* Different Software Applications
 	* Private Computers
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img-iipc/minutes.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img-iipc/undergradBulletin.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/applications1.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/applications2.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 #### [Ben Goldman, "Outfitting a Born-Digital Archives Program"<br/><i>Practical Technology for Archives</i>&nbsp;&nbsp; Issue 2 (June 2014)](http://https://practicaltechnologyforarchives.org/issue2_goldman/)
 
 
 <!-- .slide: data-background="img/diskImaging.jpg" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Collecting Priorities
 
 1. Automated digital transfers over network storage
@@ -108,9 +100,7 @@ revealOptions:
 6. Paper when maintained as such
 7. Records in closed systems
 8. Disk imaging of magnetic media
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 * Network Folder Share
@@ -123,62 +113,44 @@ revealOptions:
 	* Enters line in accessions.xlsx
 * Custom scripts for SmugMug and other systems with APIs
 * Manual collecting over GoogleDrive
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/transferShares.png" -->
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Current Storage
 
 * \\\\romeo\SPE\ua200-7VsAhYXbfYg3EKXaypCJeD
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 * [Transfer Script](https://github.com/UAlbanyArchives/ua200/blob/master/ua200.py)
 <img src="img/recordsCollecting1.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting2.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting3.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
 <img src="img/recordsCollecting4.png"/>
 
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Current Access System
 
 * [University Senate Records](http://meg.library.albany.edu:8080/archive/view?docId=ua200.xml)
 * [Luna DAMS](http://luna.albany.edu/luna/servlet/s/pppxob)
 * [Digital Media Department](http://meg.library.albany.edu:8080/archive/view?docId=ua395.xml)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Maintenance
 
 * Scripts break over time
 	* No more ad-hoc approaches
 	* No more XML data stores
 * Network of well-maintained interoperable tools
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Things I don't really care about
 
 * File formats
@@ -188,9 +160,7 @@ revealOptions:
 * Literal interpretation of OAIS
 * Compression
 * Any micro preservation activity
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Things I do care about
 
 * Automation/scale
@@ -198,9 +168,7 @@ revealOptions:
 * Maintenance
 * Documentation
 * Access
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Introduction to APIs
 
 * [Wayback Machine](https://web.archive.org/web/*/http://www.albany.edu/undergraduate_bulletin/)
@@ -210,15 +178,11 @@ revealOptions:
 * [Archive-It](https://partner.archive-it.org/login?next=/archiveit)
 * [Page for Crawl](https://partner.archive-it.org/652/collections/6916/crawl/552635)
 * [API for Crawl](https://partner.archive-it.org/api/crawl_job/552635?format=json)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## ArchivesSpace is the Key
 
 <img src="img/aspaceCenter.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## What can you do with ASpace API?
 
 * Automate any changes at any scale
@@ -227,9 +191,7 @@ revealOptions:
 * Develop interoperable workflows
 * Rely on the community for sustainable code
 * [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake) makes it easier
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Separation of Concerns: Smaller Tools
 
 * [Find-it](http://libstaff/find-it/index.html)
@@ -238,9 +200,7 @@ revealOptions:
 	* \\\\LINCOLN\\Library\\SPE Staff\\Greg\\asInventory
 * [Box uploader](http://libstaff/find-it/boxes.html)
 
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## An Interoperable Repository with APIs
 
 * ArchivesSpace for Managing Metadata
@@ -250,16 +210,12 @@ revealOptions:
 * [Hyrax Repository for Digital Storage](http://169.226.92.29:8080/catalog?utf8=%E2%9C%93&search_field=all_fields&q=)
 * [Arclight for Access](http://169.226.92.29/catalog/ua200aspace_0c72d6b94d313b11ddcef771ce8dac46)
 * [Make Automatic Connections!](http://169.226.92.29:8080/concern/digital_archival_objects/new?locale=en)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## API Access Allows Maintainable Workflows
 
 
 <img src="img/apiWorkflow.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Open, Interconnected Workflows
 
 1. Detect accession
@@ -267,9 +223,7 @@ revealOptions:
 4. Ingest into digital repository
 5. Que for review 
 6. Expose data into central search index
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Make Access Familiar
 
 * Discoverable alongside paper records
@@ -279,28 +233,20 @@ revealOptions:
 * Computational access to collections data
 	* Researchers use APIs too
 	* Rights for this part of EAD and DACS
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <img src="img/recordsCollecting7.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## An Interoperable Repository with APIs
 
 <img src="img/apiConnectionsLogos.png"/>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Practical Challenges
 
 * Administering Hyrax Sustainably
 * Advocacy and legwork with creators
 * Updating
 * Maintenance
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Wider Challenges
 
 * Technical Literacy
@@ -315,17 +261,13 @@ revealOptions:
 	* Programmer-Archivists is not a great solution
 * Demonstrate Value
 	*  Chicken and Egg problem
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Strengths
 
 * Community
 * Openness
 * Archivists are awesome
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records at UAlbany
 
 
@@ -335,4 +277,56 @@ revealOptions:
 ##### University Archivist
 ##### University at Albany, SUNY
 ##### GWiedeman@albany.edu
-##### <a>@gregwiedeman</a>
+##### <a>@gregwiedeman</a></script></section></div>
+        </div>
+
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
+
+        <script>
+            function extend() {
+              var target = {};
+              for (var i = 0; i < arguments.length; i++) {
+                var source = arguments[i];
+                for (var key in source) {
+                  if (source.hasOwnProperty(key)) {
+                    target[key] = source[key];
+                  }
+                }
+              }
+              return target;
+            }
+
+            // Optional libraries used to extend on reveal.js
+            var deps = [
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: 'plugin/math/math.js', async: true }
+            ];
+
+            // default options to init reveal.js
+            var defaultOptions = {
+              controls: true,
+              progress: true,
+              history: true,
+              center: true,
+              transition: 'default',
+              dependencies: deps
+            };
+
+            // options from URL query string
+            var queryOptions = Reveal.getQueryHash() || {};
+
+            var options = {
+  "transition": "fade"
+};
+            options = extend(defaultOptions, options, queryOptions);
+            Reveal.initialize(options);
+        </script>
+        
+          <script src="/scripts/slides"></script>
+    </body>
+</html>
