updated nyac slides

--- a/presentations/slides/nyac2018.html
+++ b/presentations/slides/nyac2018.html
@@ -150,6 +150,8 @@
 	* No more ad-hoc approaches
 	* No more XML data stores
 * Network of well-maintained interoperable tools
+	* APIs connections
+	* Data Models
 </script></section><section  data-markdown><script type="text/template">
 ## Things I don't really care about
 
@@ -199,7 +201,12 @@
 * [asInventory](https://github.com/UAlbanyArchives/asInventory)
 	* \\\\LINCOLN\\Library\\SPE Staff\\Greg\\asInventory
 * [Box uploader](http://libstaff/find-it/boxes.html)
+</script></section><section  data-markdown><script type="text/template">
+## Data Models!
 
+<img src="img/lunaDataModel.png"/>
+</script></section><section  data-markdown><script type="text/template">
+<!-- .slide: data-background="img/linkedData.png" -->
 </script></section><section  data-markdown><script type="text/template">
 ## An Interoperable Repository with APIs
 
