--- a/presentations/slides/nyac2018.html
+++ b/presentations/slides/nyac2018.html
@@ -35,7 +35,6 @@
 * First attempt and maintenance issues
 * Building Born-Digital infrastructure
 * Making Access Familiar
-* Challenges (they're not really technical)
 </script></section><section  data-markdown><script type="text/template">
 ## The University Archives
 
@@ -67,6 +66,7 @@
 * Today most permanent records are created digitally
 * Digital space is less of a barrier
 * Creators want near-immediate access
+* Chicken and Egg resources problem
 </script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records Collecting in Practice
 
@@ -91,17 +91,6 @@
 
 
 <!-- .slide: data-background="img/diskImaging.jpg" -->
-</script></section><section  data-markdown><script type="text/template">
-## Born-Digital Collecting Priorities
-
-1. Automated digital transfers over network storage
-2. Web crawling
-3. Disk imaging of robust external media
-4. Manual transfer over cloud storage
-5. Records in web-based systems with open APIs
-6. Paper when maintained as such
-7. Records in closed systems
-8. Disk imaging of magnetic media
 </script></section><section  data-markdown><script type="text/template">
 ## Establishing a Collecting Program
 
@@ -155,24 +144,6 @@
 	* APIs connections
 	* Data Models
 </script></section><section  data-markdown><script type="text/template">
-## Things I don't really care about
-
-* File formats
-	* identification
-	* validation
-	* migration for preservation
-* Literal interpretation of OAIS
-* Compression
-* Any micro preservation activity
-</script></section><section  data-markdown><script type="text/template">
-## Things I do care about
-
-* Automation/scale
-* Description/content standards
-* Maintenance
-* Documentation
-* Access
-</script></section><section  data-markdown><script type="text/template">
 ## Introduction to APIs
 
 * [Wayback Machine](https://web.archive.org/web/*/http://www.albany.edu/undergraduate_bulletin/)
@@ -189,10 +160,10 @@
 </script></section><section  data-markdown><script type="text/template">
 ## What can you do with ASpace API?
 
+* Fully exploit archival description
 * Automate any changes at any scale
 	* Data Model makes sure its consistent
 * Connect with other systems
-* Develop interoperable workflows
 * Rely on the community for sustainable code
 * [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake) makes it easier
 </script></section><section  data-markdown><script type="text/template">
@@ -224,14 +195,7 @@
 
 
 <img src="img/apiWorkflow.png"/>
-</script></section><section  data-markdown><script type="text/template">
-## Open, Interconnected Workflows
 
-1. Detect accession
-2. Get contextual data from ArchivesSpace API
-4. Ingest into digital repository
-5. Que for review 
-6. Expose data into central search index
 </script></section><section  data-markdown><script type="text/template">
 ## Make Access Familiar
 
@@ -239,9 +203,6 @@
 * [In context with upper level Archival Description](http://169.226.92.29:8080/concern/digital_archival_objects/fj236208t?locale=en)
 * Purpose of website is to access paper and digital records
 * Demonstrate value to campus and outside donors
-* Computational access to collections data
-	* Researchers use APIs too
-	* Rights for this part of EAD and DACS
 </script></section><section  data-markdown><script type="text/template">
 <img src="img/recordsCollecting7.png"/>
 </script></section><section  data-markdown><script type="text/template">
@@ -249,33 +210,30 @@
 
 <img src="img/apiConnectionsLogos.png"/>
 </script></section><section  data-markdown><script type="text/template">
-## Practical Challenges
+## Things I don't really care about
+
+* File formats
+	* identification
+	* validation
+	* migration for preservation
+* Literal interpretation of OAIS
+* Compression
+* Any micro preservation activity
+</script></section><section  data-markdown><script type="text/template">
+## Things I do care about
+
+* Automation/scale
+* Description/content standards
+* Maintenance
+* Documentation
+* Access
+</script></section><section  data-markdown><script type="text/template">
+## Challenges
 
 * Administering Hyrax Sustainably
 * Advocacy and legwork with creators
 * Updating
 * Maintenance
-</script></section><section  data-markdown><script type="text/template">
-## Wider Challenges
-
-* Technical Literacy
-	* Data modeling
-	* User Experience Design (UX)
-* Resources demands
-	* Use extensible processing
-* Communication
-	* Getting archivists and technologists on the same page
-* System Administration and *minimal* custom development
-	* Staffing and administration problem
-	* Programmer-Archivists is not a great solution
-* Demonstrate Value
-	*  Chicken and Egg problem
-</script></section><section  data-markdown><script type="text/template">
-## Strengths
-
-* Community
-* Openness
-* Archivists are awesome
 </script></section><section  data-markdown><script type="text/template">
 ## Born-Digital Records at UAlbany
 
