linked ndsa talk

--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
 			</div>
             <div class="row">
 				<div class="col-xs-12 sequence">
+                
+                    <div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
+								<h4><a href="presentations/slides/ndsa2018.html">Processing Born-Digital Images at Scale</a></h4>
+								<h5>2018 August</h5>
+								<p>Remote talk for the NDSA Content Interest Group looking back on processing born-digital images at scale, maintenance issues, and building infrastructure.</p>
+							</div>
+						</div>
+					</div>
 				
 					<div class="well workshop-well">
 						<div class="row">
