--- a/presentations/slides/ndsa2018.html
+++ b/presentations/slides/ndsa2018.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
     <head>
@@ -6,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
         <title>Processing Born-Digital Images at Scale</title>
-        <link rel="stylesheet" href="/css/reveal.css">
-        <link rel="stylesheet" href="/css/theme/serif.css" id="theme">
-        <link rel="stylesheet" href="/css/highlight/zenburn.css">
-        <link rel="stylesheet" href="/css/print/paper.css" type="text/css" media="print">
+        <link rel="stylesheet" href="./css/reveal.css">
+        <link rel="stylesheet" href="./css/theme/serif.css" id="theme">
+        <link rel="stylesheet" href="./css/highlight/zenburn.css">
+        <link rel="stylesheet" href="./css/print/paper.css" type="text/css" media="print">
 
 
     </head>
@@ -259,8 +258,8 @@
 </script></section></div>
         </div>
 
-        <script src="/lib/js/head.min.js"></script>
-        <script src="/js/reveal.js"></script>
+        <script src="./lib/js/head.min.js"></script>
+        <script src="./js/reveal.js"></script>
 
         <script>
             function extend() {
@@ -278,13 +277,13 @@
 
             // Optional libraries used to extend on reveal.js
             var deps = [
-              { src: '/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-              { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-              { src: '/plugin/zoom-js/zoom.js', async: true },
-              { src: '/plugin/notes/notes.js', async: true },
-              { src: '/plugin/math/math.js', async: true }
+              { src: './lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: './plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: './plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: './plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: './plugin/zoom-js/zoom.js', async: true },
+              { src: './plugin/notes/notes.js', async: true },
+              { src: './plugin/math/math.js', async: true }
             ];
 
             // default options to init reveal.js
