--- a/presentations/slides/ait2018.html
+++ b/presentations/slides/ait2018.html
@@ -208,7 +208,7 @@ edu,albany)/president/about-the-president.php 20180717204617 https://www.albany.
 * Describing Web Archives Interest Group?
     * [https://bit.ly/ELsNXC](https://docs.google.com/forms/d/e/1FAIpQLSdfx4qtXYrizbSwR1Uk8OxJS7p9JrRy3JOEAA4ooAOkHnKbrg/viewform?usp=sf_link)
 
-* Slides: [http://gregwiedeman.com/ait2018.html](http://www.gregwiedeman.com/ait2018.html)
+* Slides: [http://www.gregwiedeman.com/ait2018.html](http://www.gregwiedeman.com/ait2018.html)
 * Code: [https://github.com/UAlbanyArchives/describingWebArchives](https://github.com/UAlbanyArchives/describingWebArchives)
 * DACS Principles: [https://github.com/saa-ts-dacs/dacs](https://github.com/saa-ts-dacs/dacs)
 
