--- a/index.html
+++ b/index.html
@@ -265,6 +265,16 @@
                     <div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/ait2018.html">Describing Web Archives with the Partner Data API</a></h4>
+								<h5>2018 August</h5>
+								<p>Talk at the Archive-It Partner Meeting on using DACS and archvial practices to describe web archives using the Partner Data API.</p>
+							</div>
+						</div>
+					</div>
+                
+                    <div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="presentations/slides/ndsa2018.html">Processing Born-Digital Images at Scale</a></h4>
 								<h5>2018 August</h5>
 								<p>Remote talk for the NDSA Content Interest Group looking back on processing born-digital images at scale, maintenance issues, and building infrastructure.</p>
