--- a/presentations/slides/code4lib2019.html
+++ b/presentations/slides/code4lib2019.html
@@ -1,8 +1,27 @@
----
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Providing Computational Access to Records of American Capital Punishment
+</title>
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/serif.css" id="theme">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
+
+        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <script>
+          document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        </script>
+    </head>
+    <body>
+
+        <div class="reveal">
+            <div class="slides"><script type="text/template">---
 title: Describing Web Archives with the Partner Data API
 revealOptions:
     transition: 'fade'
----
+</script><section  data-markdown><script type="text/template">
 <style>
 #fLeft {float: left; max-width: 60%; text-align: left;}
 #fRight {float: right; max-width: 40%; text-align: left;}
@@ -21,8 +40,7 @@ section {height:100%}
 ##### <img alt="Twitter logo" src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
 ##### Code4Lib 2019
 
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### National Death Penalty Archive
 
 <div id="fLeft">
@@ -31,9 +49,7 @@ UAlbany collects records from researchers, writers, and activists related to cap
 <div id="fRight">
 <img alt="Image of Death penalty moratorium walk held my Floridians for Alternatives to the Death Penalty" src="http://library.albany.edu/sites/all/themes/New_UArchives/img/700/ndpa700.jpg"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <div id="fLeft">
 <h3>Watt Espy Papers</h3>
 The most complete set of extant records of American executions.
@@ -52,24 +68,18 @@ The most complete set of extant records of American executions.
 <div id="fRight">
 	<img alt="Image of correctional record for Jerry Coleman from the Watt Espy Papers" src="img/B35_F011_000067.jpg"/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="https://library.albany.edu/sites/all/themes/New_UArchives/img/1900/ndpa1.jpg" alt="Test" -->
 
 <p class="altText">Image of Index card summaries of executions.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### The ESPY File
 
 * <a href="https://www.icpsr.umich.edu/icpsrweb/NACJD/studies/8451/summary">NSF-funded project</a> in 1984 to create a dataset from the collection.
     * "The most often cited and used list of America’s legal executions"
 * Researchers have traveled to view discrepancies with the source material
 * Paul H. Blackman and Vance McLaughlin, <a href="https://doi.org/10.1177/1088767911418054">The Espy File on American Executions: User Beware</a> (2011)
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 #### Computational Analysis and the Death Penalty
 
 * <i>Furman v. Georgia</i> (1972)
@@ -81,9 +91,7 @@ The most complete set of extant records of American executions.
 	* invalidated statistical analysis for 14th amendment claims
 * <i>Miller-El v. Dretke</i> (2005)
     * Utilized statistical analysis for <i>Batson</i> challenge
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### <a href="http://registry.clir.org/projects/23081088">The Digital Archive of Executions in the United States, 1608-2002</a>
 <div style="margin: 30px;">
 <ul>
@@ -101,9 +109,7 @@ The most complete set of extant records of American executions.
 <img alt="ArcLight logo" src="img/arclight_logo.png" style="margin: -5px; background-color: #000; border: none; box-shadow: none; width: 300px" />
 <img alt="Hyrax logo" src="img/hyrax_logo.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="300px" />
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### The "We"
 
 <div id="fLeft">
@@ -136,8 +142,7 @@ The most complete set of extant records of American executions.
 </ul>
 </div>
 	
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Espy Metadata Creation Tool
 
 * Samvera and Hyrax is Rails application
@@ -150,26 +155,18 @@ The most complete set of extant records of American executions.
 * Create new Espy Records backed by Data Model
 * Make the computer do the boring work
 * Focus on intellectual process of metadata creation
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy1.png" -->
 
 <p class="altText">Screenshot of metadata creation tool to link records with redis autocomplete.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/espy3.png" -->
 
 <p class="altText">Screenshot of metadata creation tool displaying three types of source material.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <img style="width:50%;" alt="Records from newspaper listing hundreds of executions. This was still very challenging to link to hundreds on individual records, no matter what we tried." src="img/B44_F001_000026.jpg" />
 
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <div id="fLeft">
 <h4>Metadata Matters</h4>
 <ul>
@@ -199,9 +196,7 @@ our own</li>
 	</li>
 	</ul>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Metadata Matters
 
 * General Data Improvements
@@ -212,24 +207,18 @@ our own</li>
 	* Sex to become gender assigned
 * Race does not conform to an established standard
 * Feedback welcome!
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### "Unconfirmed" cases
 
 <img src="img/enslavedWoman1.png" alt="Index card summary of enslaved women named Phoebe who was accused of murder, it is unclear if she was executed." />
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <div id="fLeft">
 <img src="img/B19_F006_000008.jpg" alt="Article from the 1829 New Orleans Bee which is one of the few known primary sources documenting the case." />
 </div>
 <div id="fRight">
 <img src="img/B19_F006_000009.jpg" alt="Second article from the 1829 New Orleans Bee which is one of the few known primary sources documenting the case."/>
 </div>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### "Unconfirmed" cases
 
 <div id="fLeft">
@@ -246,9 +235,7 @@ our own</li>
 	<img alt='Note of unconfirmed execution: "Legal Execution for Witchcraft in 1793 sounds fishy..."' src="img/B36_F004_000010.jpg"/>
 </div>
    
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Linked Data Problems
 
 * Hard to find vocabularies with sufficient precision
@@ -259,34 +246,22 @@ our own</li>
 	* Archival description manages objects with minimal metadata by relying on context
 	* Archives don't aim to create objective/authoritative data
 
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/c4l-arclight1.png" -->
 <p class="altText">Screenshot of ArcLight, which is used with Hyrax and NCSU's Quicksearch to provide access.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/c4l-arclight2.png" -->
 <p class="altText">Screenshot of ArcLight showing links to contextual archival description.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/c4l-arclight3.png" -->
 <p class="altText">Screenshot of ArcLight highlighing links to contextual archival description.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/arclight3.png" -->
 <p class="altText">Screenshot of JSON API provided by ArcLight.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/c4l-hyrax1.png" -->
 <p class="altText">Screenshot of document in Hyrax with contextual links provided by ArcLight API.</p>
-
----
-
+</script></section><section  data-markdown><script type="text/template">
 ### Providing Computational Access to Records of American Capital Punishment
 <br/>
 
@@ -296,3 +271,56 @@ our own</li>
 ##### University Archivist
 ##### University at Albany, SUNY
 ##### <img alt="Twitter logo" src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
+</script></section></div>
+        </div>
+
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
+
+        <script>
+            function extend() {
+              var target = {};
+              for (var i = 0; i < arguments.length; i++) {
+                var source = arguments[i];
+                for (var key in source) {
+                  if (source.hasOwnProperty(key)) {
+                    target[key] = source[key];
+                  }
+                }
+              }
+              return target;
+            }
+
+            // Optional libraries used to extend on reveal.js
+            var deps = [
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: 'plugin/math/math.js', async: true }
+            ];
+
+            // default options to init reveal.js
+            var defaultOptions = {
+              controls: true,
+              progress: true,
+              history: true,
+              center: true,
+              transition: 'default',
+              dependencies: deps
+            };
+
+            // options from URL query string
+            var queryOptions = Reveal.getQueryHash() || {};
+
+            var options = {
+  "transition": "fade"
+};
+            options = extend(defaultOptions, options, queryOptions);
+            Reveal.initialize(options);
+        </script>
+        
+          <script src="/scripts/slides"></script>
+    </body>
+</html>
