--- a/presentations/slides/code4lib2019.html
+++ b/presentations/slides/code4lib2019.html
@@ -143,9 +143,21 @@ The most complete set of extant records of American executions.
 </div>
 	
 </script></section><section  data-markdown><script type="text/template">
+
+### Supporting Open-Source at UAlbany
+
+* Systems and University staff had experience with enterprise systems
+* On-site virtualized data center
+* CLIR Grant demonstrated the value of the work we could do with more technology
+* Archivists and Systems staff learned together collaboratively
+	* Archivists took hands-on role with Rails, adapting and configuring systems
+* Sustainability a work in progress
+* Dependent on maintainers and open source community
+
+</script></section><section  data-markdown><script type="text/template">
 ### Espy Metadata Creation Tool
 
-* Samvera and Hyrax is Rails application
+* Samvera and Hyrax are Rails applications
 * "Ramp up" plan for repository implementation and maintenance
 * Makes connections between 4 difference sources
 	* Small Index Cards
@@ -223,11 +235,11 @@ our own</li>
 
 <div id="fLeft">
 <ul>
-<li>Added over 5,800 records</li>
+<li>Added over 6,000 records</li>
 	<ul>
 		<li>Real number will be smaller after disambiguation</li>
 	</ul>
-<li>15,000 to 20,000 known executions</li>
+<li>15,254 to 21,325 known executions</li>
 <li>Documented and underdocumented</li>
 </ul>
 </div>
