updated slides, hopefully the final version

--- a/presentations/slides/code4lib2019.html
+++ b/presentations/slides/code4lib2019.html
@@ -30,6 +30,7 @@ revealOptions:
 .whitebg {background-color: #fff; margin-top: 30% !important; padding: 15px !important; border-radius: 15px;}
 .altText {background-color: #fff; bottom: 30px; position: fixed; padding: 15px !important; border-radius: 5px;}
 section {height:100%}
+.pullDown {height:auto}
 </style>
 
 ### Providing Computational Access to Records of American Capital Punishment
@@ -40,7 +41,7 @@ section {height:100%}
 ##### <img alt="Twitter logo" src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
 ##### Code4Lib 2019
 
-</script></section><section  data-markdown><script type="text/template">
+</script></section><section class="pullDown" data-markdown><script type="text/template">
 ### National Death Penalty Archive
 
 <div id="fLeft">
@@ -272,17 +273,17 @@ our own</li>
 <p class="altText">Screenshot of JSON API provided by ArcLight.</p>
 </script></section><section  data-markdown><script type="text/template">
 <!-- .slide: data-background="img/c4l-hyrax1.png" -->
-<p class="altText">Screenshot of document in Hyrax with contextual links provided by ArcLight API.</p>
+<p class="altText" style="width:50%">Screenshot of document in Hyrax with contextual links provided by ArcLight API.</p>
 </script></section><section  data-markdown><script type="text/template">
-### Providing Computational Access to Records of American Capital Punishment
-<br/>
-
-<h4><a href="https://archives.albany.edu">https://archives.albany.edu</a></h4>
-
-##### Gregory Wiedeman
-##### University Archivist
-##### University at Albany, SUNY
-##### <img alt="Twitter logo" src="img-saa16/twitter.png" style="margin: -5px; background: none; border: none; box-shadow: none;" width="45px" /> @GregWiedeman
+##### Providing Computational Access to Records of American Capital Punishment
+##### Gregory Wiedeman -- University at Albany, SUNY
+<dl>
+<dt>Hyrax/Arclight/Quicksearch Frontend</dt><dd><a href="https://archives.albany.edu">https://archives.albany.edu</a></dd>
+<dt>Espy Metadata Creation Tool</dt><dd><a href="https://github.com/UAlbanyArchives/espyMetadata">https://github.com/UAlbanyArchives/espyMetadata</a></dd>
+<dt>UAlbany Hyrax</dt><dd><a href="https://github.com/UAlbanyArchives/hyrax-UAlbany">https://github.com/UAlbanyArchives/hyrax-UAlbany</a></dd>
+<dt>UAlbany ArcLight</dt><dd><a href="https://github.com/UAlbanyArchives/arclight-UAlbany">https://github.com/UAlbanyArchives/arclight-UAlbany</a></dd>
+<dt>Quicksearch Theme, Searchers for Hyrax and ArcLight</dt><dd><a href="https://github.com/UAlbanyArchives?utf8=%E2%9C%93&tab=repositories&q=quick&type=&language=">https://github.com/UAlbanyArchives</a></dd>
+</dl>
 </script></section></div>
         </div>
 
