linked slides to page

--- a/index.html
+++ b/index.html
@@ -265,6 +265,16 @@
                     <div class="well workshop-well">
 						<div class="row">
 							<div class="col-xs-12">
+								<h4><a href="presentations/slides/code4lib2019.html">Providing Computational Access to Records of American Capital Punishment</a></h4>
+								<h5>2019 February</h5>
+								<p>Code4Lib 2019 talk on the challenges of providing computational access to the Espy Papers, including presenting the material in context and the metadata empathetically.</p>
+							</div>
+						</div>
+					</div>
+					
+					<div class="well workshop-well">
+						<div class="row">
+							<div class="col-xs-12">
 								<h4><a href="https://docs.google.com/presentation/d/1KOojRNEGxP62K-7jkqsoIx7va4fswA2PGxiDC2MlLPM/edit?usp=sharing">Challenges and Conflicts of Linked Data in Archives</a></h4>
 								<h5>2018 August</h5>
 								<p>Talk that askes if publishing Linked Data conflicts with the mission of archives. Part of SAA 2018 Session 303: Progress (and Pitfalls) of Linked Data Projects. (<a href="presentations/slides/saa2018.pptx">pptx</a>)</p>
