--- a/presentations/slides/au2019.html
+++ b/presentations/slides/au2019.html
@@ -59,13 +59,13 @@ section {height:100%;}
 * Purposely document conflicting views
     * Conservative Party of NYS
     * Ernest Van Den Haag
-* Listening to at-risk groups
+* Emphasizing with at-risk groups
 * Is conservatism underdocumented?
     * Maybe in quantity, but not in research value
     * Content-wise this is garbage
-    * Underdocumented records are not on the web
 * SPLC already adding to Wayback
 * Can directly aid research
+
 </script></section><section  data-markdown><script type="text/template">
 ### Crawling a Racist Website
 
