--- a/slides/c4lne.html
+++ b/slides/c4lne.html
@@ -26,18 +26,19 @@
     <body>
 
         <div class="reveal">
-            <div class="slides"><section  data-markdown><script type="text/template"><link rel="stylesheet" href="css/theme/moon.css">
-## No More Finding Aids
-A New Frontend for Special Collections & Archives at UAlbany
+            <div class="slides"><section data-markdown><script type="text/template"><link rel="stylesheet" href="css/theme/moon.css"/>
+<h2>No More Finding Aids</h2>
+<p>A New Frontend for Special Collections & Archives at UAlbany </p>
 
 <img width="18%" src="img-c4lne/rip.png"/>
+
 <br/>
 Gregory Wiedeman<br/>
 University Archivist<br/>
 University at Albany, SUNY<br/>
 @gregwiedeman
-</script></section><section  data-markdown><script type="text/template">
-#Archives are Esoteric
+</script></section><section data-markdown><script type="text/template">
+# Archives are Esoteric
 
 <p class="fragment" data-fragment-index="1">-"intended for or likely to be understood by only a small number of people with a specialized knowledge or interest."</p>
 
