CAA slides update

--- a/slides/caa2020.html
+++ b/slides/caa2020.html
@@ -82,8 +82,9 @@ Curator of Digital Collections
 </script></section><section  data-markdown><script type="text/template">
 ## Lowering barriers
 
-* Consortium!
+* [EmpireADC](https://www.empireadc.org/) Consortium
 * [staticAid](https://hillelarnold.com/blog/2016/02/a-static-html-site-generator-for-archival-description/)
+* [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake)
 * Respositories are the worst
 </script></section><section  data-markdown><script type="text/template">
 ### What challenges are you facing?
