last minute slide updates

--- a/slides/caa2020.html
+++ b/slides/caa2020.html
@@ -56,8 +56,8 @@ Curator of Digital Collections
 * 2016: [ArchivesSpace](https://aspace.library.albany.edu/)
     * [Find-It](https://archives.albany.edu/find-it/)
     * [asInventory](https://github.com/UAlbanyArchives/asInventory)
+* 2019: Wrote [Hyrax](https://archives.albany.edu/catalog) into CLIR Digitization Grant
 * 2019: [ArcLight](https://archives.albany.edu/description/)
-* 2019: [Hyrax](https://archives.albany.edu/catalog)
 </script></section><section  data-markdown><script type="text/template">
 ## More details
 
@@ -85,7 +85,9 @@ Curator of Digital Collections
 * [EmpireADC](https://www.empireadc.org/) Consortium
 * [staticAid](https://hillelarnold.com/blog/2016/02/a-static-html-site-generator-for-archival-description/)
 * [ArchivesSnake](https://github.com/archivesspace-labs/ArchivesSnake)
-* Respositories are the worst
+* [Oxford Common File Layout](https://ocfl.io/)
+</script></section><section  data-markdown><script type="text/template">
+### What is the need and role of web systems and archives?
 </script></section><section  data-markdown><script type="text/template">
 ### What challenges are you facing?
 </script></section><section  data-markdown><script type="text/template">
